<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp">

        <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="3dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TableLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:text="@string/rotulo_planejado"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                        <TextView
                            android:id="@+id/tvPercursoPlanejado"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:text="@string/rotulo_valor_planejado"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:text="@string/rotulo_caminhado"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                        <TextView
                            android:id="@+id/tvPercursoEfetuado"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:text="@string/rotulo_valor_caminhado"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:text="@string/rotulo_restante"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                        <TextView
                            android:id="@+id/tvPercursoRestante"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:text="@string/rotulo_valor_restante"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="140dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="3dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TableLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:text="@string/rotulo_proximo"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                        <TextView
                            android:id="@+id/tvIdentificacaoProximoPonto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:text="@string/rotulo_valor_proximo"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:text="@string/rotulo_direcao"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                        <TextView
                            android:id="@+id/tvDirecaoProximoPonto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:text="@string/rotulo_valor_direcao"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:text="@string/rotulo_distancia"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                        <TextView
                            android:id="@+id/tvDistanciaProximoPonto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:text="@string/rotulo_valor_distancia"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:orientation="vertical">


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabIniciarNavegacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_iniciar_navegacao"
            app:backgroundTint="#59ac5f" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:text="@string/rotulo_fab_iniciar_navegacao"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabContinuarDepois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_continue"
            app:backgroundTint="@android:color/holo_orange_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:text="@string/rotulo_fab_continuar_depois"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabLimparNavegacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_limpar_navegacao"
            app:backgroundTint="@android:color/holo_red_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:text="@string/rotulo_fab_limpar_navegacao"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />
    </LinearLayout>

</RelativeLayout>
